# olist-brazilian-ecommerce-analysis

./: .gitignore  README.md  data.dvc  parameters.yaml  pyproject.toml  requirements.txt
.dvc/: config
files/: erd_code.txt
notebooks/: 01-orders-eda.ipynb
